# my-claude-code-plugin

./: .gitignore  CLAUDE.md
.claude-plugin/: marketplace.json
.claude/plans/: jiggly-drifting-eagle.md  nifty-humming-charm.md  starry-doodling-candle.md
claude-usage-app/: Package.swift
claude-usage-app/Resources/: AppIcon.icns  Info.plist
claude-usage-app/Sources/ClaudeUsage/: AppState.swift  ClaudeUsageApp.swift
claude-usage-app/Sources/ClaudeUsage/Models/: Account.swift  UsageData.swift
claude-usage-app/Sources/ClaudeUsage/Services/: BinaryCookieParser.swift  BrowserAuthService.swift  KeychainService.swift  OrionService.swift  WebAuthService.swift
claude-usage-app/Sources/ClaudeUsage/Views/: AccountRowView.swift  LoginWebView.swift  UsagePopoverView.swift
claude-usage-app/scripts/: build-app.sh
plugins/: Cargo.toml
plugins/aiproxy-common/: Cargo.toml
plugins/aiproxy-common/src/: lib.rs  session.rs
plugins/aiproxy-common/src/sse/: gemini.rs  mod.rs  streaming.rs
plugins/aiproxy-common/src/tools/: git_diff.rs  glob.rs  grep.rs  mod.rs  read.rs
plugins/aiproxy-common/tests/: e2e_config.rs  e2e_session.rs  e2e_sse.rs  e2e_streaming.rs  e2e_tools.rs
plugins/aiproxy-dev/.claude-plugin/: plugin.json
plugins/braintrust/.claude-plugin/: plugin.json
plugins/braintrust/agents/: braintrust.md
plugins/braintrust/prompts/: chair-analysis.md  chair-synthesis.md  participant.md
plugins/braintrust/scripts/: Cargo.toml  build.sh
plugins/braintrust/scripts/src/: config.rs  events.rs  main.rs  orchestrator.rs  session.rs
plugins/braintrust/scripts/src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
plugins/braintrust/scripts/src/sse/: anthropic.rs  mod.rs  openai.rs
plugins/braintrust/scripts/src/tools/: git_diff.rs  glob.rs  grep.rs  mod.rs  read.rs
plugins/codex-appserver/: Cargo.toml
plugins/codex-appserver/src/: lib.rs
plugins/codex-appserver/src/appserver/: client.rs  mod.rs  protocol.rs
plugins/codex-appserver/tests/: e2e_appserver.rs
plugins/codex-coder/.claude-plugin/: plugin.json
plugins/codex-coder/agents/: verify-impl.md
plugins/codex-review/: CHANGELOG.md  LICENSE  README.md
plugins/codex-review/.claude-plugin/: plugin.json
plugins/codex-review/agents/: verify-review.md
plugins/codex-review/scripts/: Cargo.toml
plugins/codex-review/scripts/src/: main.rs  project_memory.rs  review_loop.rs
plugins/gemini-lens/: README.md
plugins/gemini-lens/.claude-plugin/: plugin.json
(+18 files in other folders)
