[package]
name = "aiproxy-common"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6"
futures-util = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
