[package]
name = "braintrust"
version = "1.4.0"
edition = "2021"

[[bin]]
name = "braintrust"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
glob = "0.3"
regex = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"

[profile.release]
opt-level = "z"
lto = true
strip = true
