[package]
name = "codex-review"
version = "2.2.0"
edition = "2021"

[[bin]]
name = "codex-review"
path = "src/main.rs"

[dependencies]
aiproxy-common = { path = "../../aiproxy-common" }
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
